Fix for misalignment of footer in Firefox

--- a/dj_tagged/siteModel/static/siteModel/style.css
+++ b/dj_tagged/siteModel/static/siteModel/style.css
@@ -301,16 +301,7 @@ div#side {
 .default_container {
     margin-left: auto;
     margin-right: auto;
-}
-
-#footer {
-    width:100%;
-    height:80px;
-    position:absolute;
-    bottom:0;
-    left:0;
-    background:#ee5;
-    text-align:center;
+    min-height: 100%;
 }
 
 form.language {
